--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-	<link rel="apple-touch-icon" href="img/お金欲しいよぉぉ.png" sizes="180x180">
+	<link rel="apple-touch-icon" href="お金欲しいよぉぉ.png" sizes="180x180">
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="uaa.css">
@@ -20,7 +20,7 @@
       <li class="nav-list-item">仮</li>
       <li class="nav-list-item">PC版（スマホ版を作る気力はない）</li>
     </ul>
-	<div style="position:absolute; top:-10px; left:1300px"><img src="img/お金欲しいよぉぉ.png" width="150px" height="150px" border="px" alt="可愛い絵"></div>
+	<div style="position:absolute; top:-10px; left:1300px"><img src="お金欲しいよぉぉ.png" width="150px" height="150px" border="px" alt="可愛い絵"></div>
   </header>
 </body>
 <div>＜お知らせ(?)＞cssが適応されたー＆ホームページリニューアルしましたー（n回目）　　　　</div>
@@ -36,8 +36,8 @@
 <div>　　　　</div>
 <div><div style="position:absolute; top:200px; left:0px">
 
-	<img src="img/9d859a660cc2813c593d3c2f8a7a5070.jpg" width="200px" height="250px" border="px" alt="可愛い絵">　　　　</div>
-<div>　　この絵可愛くね？　　</div>
+	<img src="9d859a660cc2813c593d3c2f8a7a5070.jpg" width="200px" height="250px" border="px" alt="可愛い絵">　　　　</div>
+<div>　　　　</div>
 <div>　　　　</div>
 <div>　　　　</div>
 <div>　　　　</div>
