--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<center><button  class="default"onClick="document.location='https://fujisan7.github.io/janken/';">一人じゃんけん</button>　<button  class="default"onClick="document.location='https://fujisan7.github.io/fujiisi7-/';">旧²ホームページ</button>
 			   
 			<div></div><button  class="default"onClick="document.location='https://fujisan7.github.io/memodemo/';">簡易メモサイト</button>　<button  class="default"onClick="document.location='https://fujisan7.github.io/ho-mu2/';">旧ホームページ</button>
-			<div></div><button  class="default"onClick="document.location='https://';">　　404　　　</button>　<button  class="default"onClick="document.location='https://fujisan7.github.io/memodemo/';">　　　404　　</button>
+			<div></div><button  class="default"onClick="document.location='https://fujisan7.github.io/404/';">　　404　　　</button>　<button  class="default"onClick="document.location='https://fujisan7.github.io/404/';">　　　404　　</button>
 			<footer>
 				　<div class="footer-menu">
 					　　<ul class="footer-menu-list">
