--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <!-- header -->
   <header>
   	<h1 class="headline">
-      <a>ふじいしのホームページ</a>
+      <a>　　　　ふじいしのホームページ</a>
     </h1>
     <ul class="nav-list">
-      <li class="nav-list-item">
-        <input type="button" value="twitter" onClick="document.location='https://x.com/fujiisidayo/';">
+<li class="nav-list-item">
+<input type="button" value="twitter" onClick="document.location='https://x.com/fujiisidayo/';">
       </li>
-      <li class="nav-list-item">仮</li>
-      <li class="nav-list-item">PC版（スマホ版を作る気力はない）</li>
+      <li class="nav-list-item">　　　　仮</li>
+      <li class="nav-list-item">　　　　PC版（スマホ版を作る気力はない）</li>
     </ul>
-	<div style="position:absolute; top:-10px; left:1300px"><img src="お金欲しいよぉぉ.png" width="150px" height="150px" border="px" alt="可愛い絵"></div>
+	<div style="position:absolute; top:-20px; left:0px"><img src="お金欲しいよぉぉ.png" width="150px" height="150px" border="px" alt="可愛い絵"></div>
   </header>
 </body>
 <div>＜お知らせ(?)＞cssが適応されたー＆ホームページリニューアルしましたー（n回目）　　　　</div>
@@ -31,7 +31,9 @@
 
 <div><center><p><h2>めちゃくちゃお金ほしぃぃぃ</h4></p></center></div>
 	<center><div>どうも、ごちうさが好きな学生です
-		推しはココア、チノです</div></center>
+		推しはココア、チノです</div>
+		<div>その他、特撮、ポケモン、ガジェット系
+			が好きです</div></center>
 <div>　　　　</div>
 <div>　　　　</div>
 <div><div style="position:absolute; top:200px; left:0px">
@@ -46,15 +48,35 @@
 <div>　　　　</div>
 <div>　　この絵可愛くね？　　</div>
 
-	<center><h3>ーなぞの作品たちー</h3>
+	<center><h1>ーなぞの作品たちー</h1>
 		<p>&nbsp;</p>
 		</body>
-		<html>
-
-		<center><button  class="default"onClick="document.location='https://fujisan7.github.io/janken/';">一人じゃんけん</button>　<button  class="default"onClick="document.location='https://fujisan7.github.io/fujiisi7-/';">旧²ホームページ</button>
-			   
-			<div></div><button  class="default"onClick="document.location='https://fujisan7.github.io/memodemo/';">簡易メモサイト</button>　<button  class="default"onClick="document.location='https://fujisan7.github.io/ho-mu2/';">旧ホームページ</button>
-			<div></div><button  class="default"onClick="document.location='https://fujisan7.github.io/404/';">　　404　　　</button>　<button  class="default"onClick="document.location='https://fujisan7.github.io/404/';">　　　404　　</button>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+			
+			
+			<div><a href="https://fujisan7.github.io/fujiisi7-/" class="button04"><b>旧²ほーむぺーじ</b></a>　　　<a href="fujisan7.github.io/ho-mu2/" class="button04"><b>旧ホームページ</b></a></div>
+			<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+			
+			<div><a href="404.html" class="button04"><b>一人じゃんけん</b></a>　　　<a href="404.html" class="button04"><b>簡易メモサイト</b></a></div>
+			<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+		<div>　　</div>
+			<div><a href="404.html" class="button04">NOT FOUND</a>　　　<a href="404.html" class="button04">NOT FOUND</a></div>
 			<footer>
 				　<div class="footer-menu">
 					　　<ul class="footer-menu-list">
@@ -62,8 +84,28 @@
 						　　　
 						　　</ul>
 					　</div>
+					
 				　<div class="copyright">
-					　　<p>©fujiisidayo 2024-2024 無断転載を禁じます </p>
+
+					<h1 class="headline">
+						<a></a>
+					  </h1>
+					  <ul class="nav-list">
+				  <li class="nav-list-item">
+				  <input type="button" value="twitter" onClick="document.location='https://x.com/fujiisidayo/';">
+						</li>
+						<li class="nav-list-item">
+							<input type="button" value="インスタ" onClick="document.location='https://www.instagram.com/fujiisidayo/';">
+								  </li>
+								  <li class="nav-list-item">
+									<input type="button" value="pixiv" onClick="document.location='https://www.pixiv.net/users/98664152';">
+										  </li>
+										  <li class="nav-list-item">
+											<input type="button" value="youtube" onClick="document.location='https://www.youtube.com/@fujiisidayo';">
+												  </li>
+						<li class="nav-list-item"><b>無断転載を禁じます</b></li>
+						<li class="nav-list-item"><b>©fujiisidayo2024-2025</b></li>
+					  </ul>
 					　</div>
 			</footer>
 			
