--- a/404.html
+++ b/404.html
@@ -1,2 +1,61 @@
-<link rel="stylesheet" href="/uaa.css">
-404エラーお探しのページはメンテ中か削除されました
+<!DOCTYPE html>
+
+<html>
+	<link rel="apple-touch-icon" href="お金欲しいよぉぉ.png" sizes="180x180">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="uaa.css">
+  <title>ふじホム2</title>
+</head>
+<body>
+<!-- header -->
+  <header>
+  	<h1 class="headline">
+      <a>　　　　ふじいしのホームページ</a>
+    </h1>
+    <ul class="nav-list">
+      <li class="nav-list-item">
+        <input type="button" value="twitter" onClick="document.location='https://x.com/fujiisidayo/';">
+      </li>
+      <li class="nav-list-item">　　　　仮</li>
+      <li class="nav-list-item">　　　　PC版（スマホ版を作る気力はない）</li>
+    </ul>
+	<div style="position:absolute; top:-20px; left:px"><img src="お金欲しいよぉぉ.png" width="150px" height="150px" border="px" alt="可愛い絵"></div>
+  </header>
+  <center><h1>404エラー</h1></center>
+  <div> <center><h4>お探しのページは削除されたか
+    メンテナンス中です</h4></center></div>
+   <center><img src="err_msg_1msg.png" width="px" height="px" border="px" alt="可愛い絵"></div>
+    <footer>
+        　<div class="footer-menu">
+            　　<ul class="footer-menu-list">
+                　
+                　　　
+                　　</ul>
+            　</div>
+            
+        　<div class="copyright">
+
+            <h1 class="headline">
+                <a></a>
+              </h1>
+              <ul class="nav-list">
+          <li class="nav-list-item">
+          <input type="button" value="twitter" onClick="document.location='https://x.com/fujiisidayo/';">
+                </li>
+                <li class="nav-list-item">
+                    <input type="button" value="インスタ" onClick="document.location='https://www.instagram.com/fujiisidayo/';">
+                          </li>
+                          <li class="nav-list-item">
+                            <input type="button" value="pixiv" onClick="document.location='https://www.pixiv.net/users/98664152';">
+                                  </li>
+                                  <li class="nav-list-item">
+                                    <input type="button" value="youtube" onClick="document.location='https://www.youtube.com/@fujiisidayo';">
+                                          </li>
+                <li class="nav-list-item"><b>無断転載を禁じます</b></li>
+                <li class="nav-list-item"><b>©fujiisidayo2024-2025</b></li>
+              </ul>
+            　</div>
+    </footer>
+    
+</html>
